--- a/pages/join-pathway.html
+++ b/pages/join-pathway.html
@@ -120,7 +120,7 @@
           <li>Be a) at least 17 years old with a high school diploma or equivalent or, b) age 19+ (with or without a high school diploma or equivalent)</li>
           <li>Attend weekly gatherings during Pathway (one full year)</li>
           <li>Strive to live by the BYU-Idaho Honor Code</li>
-          <li>Complete an English proficiency assessment (for non-native English speakers). (Before applying, individuals who are not proficient in English are encouraged to assess their English abilities by clicking <a target="_blank" href="https://byui.az1.qualtrics.com/SE/?SID=SV_cShGDUV2VTJZgb3">here</a>.)</li>
+          <li>Complete an English proficiency assessment (for non-native English speakers)</li>
           <li>Be capable of entry-level college academic work with post-secondary <a target="_blank" href="http://www.byui.edu/disabilities/pathway-and-disabilities">disability accommodations</a>, if qualified and required</li>
           <li>Be able to access a computer with high-speed Internet and webcam/video chat capabilities on a daily basis</li>
           <li>Live within a reasonable commuting distance of a <a href="Finder/World">Pathway site</a></li>
@@ -163,7 +163,7 @@
               <li>Search for a <a href="Finder/World"><strong><em>Pathway location</em></strong></a> near you.</li>
               <li>Click the Pathway location you want to apply to.</li>
             </ul>
-            <p><em>If the location is currently accepting applications, you will see a blue “Apply” button. (Before applying, individuals who are not proficient in English are encouraged to assess their English abilities by clicking <a target="_blank" href="https://byui.az1.qualtrics.com/SE/?SID=SV_cShGDUV2VTJZgb3">here</a>.)</em></p>
+            <p><em>If the location is currently accepting applications, you will see a blue “Apply” button.</em></p>
             <p><em>If the location is not accepting applications, contact the Pathway missionaries listed on the page to find out the next available start date.</em></p>
           </div>
           </div>
