--- a/pages/contact-us/contact-us.html
+++ b/pages/contact-us/contact-us.html
@@ -112,7 +112,7 @@
 				<div class="select-section bottom-border">
 					<span>I am a </span>
 					<select class="form-control" id="user-type">
-						<option selected="selected" disabled="disabled">--</option>
+						<option selected="selected">--</option>
 						<option data-temp-id="loading" disabled="disabled">Loading...</option>
 					</select>
 				</div>
@@ -120,7 +120,7 @@
 				<div id="topic" class="select-section bottom-border">
 					<span>Please help me with </span>
 					<select class="form-control" id="help-type">
-						<option data-temp-id="null" selected="selected" disabled="disabled">--</option>
+						<option data-temp-id="null" selected="selected">--</option>
 						<option data-temp-id="chooseaud" disabled="disabled">Please choose an audience above...</option>
 					</select>
 
