--- a/pages/contact-us/self-help-disabilities.html
+++ b/pages/contact-us/self-help-disabilities.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="">
 	<meta name="author" content="">
-	<title>Pathway - Self Help Page</title>
+	<title>Pathway - Disabilities</title>
 	
 	<!-- Browser Icons -->
 	<link rel="shortcut icon" href="/working-build/docs-assets/ico/favicon.png">
@@ -93,7 +93,7 @@
                 <li class="first"><a href="/working-build/">Home</a></li>
                 <li ><a href="/working-build/pages/contact-us/help.html">Help</a></li>
                 
-                <li class="last">Self Help Page</li> 
+                <li class="last">Disabilities</li> 
             </ul>
         </div>
     </div>
@@ -114,51 +114,7 @@
 			<div class="pf-section show">
 				<h4 class="accordion-heading">Are disability accommodations available to Pathway students?</h4>
 				<div id="accommodations" class="answer accordion">
-					<p>Disability accommodations may be available to students who qualify. For more information, visit <a href="www.byui.edu/disabilities/pathway-and-disabilities">www.byui.edu/disabilities/pathway-and-disabilities</a>.</p>
-				</div>
-			</div><br/><br/>
-
-			<div id="others-general" class="hero pf-page-header show">
-				<h2 class="heading" id="Standard">PATH</h2>
-			</div>
-			<div class="pf-section show">
-				<h4 class="accordion-heading">What is PATH?</h4>
-				<div id="whatispath" class="answer accordion">
-					<p>PATH is the name of Pathway’s administrative system. In PATH, missionaries and Pathway employees can access information about individual Pathway sites, students, and more.</p>
-				</div>
-			</div>
-			<div class="pf-section show">
-				<h4 class="accordion-heading">How can I see new applicants to my Pathway site?</h4>
-				<div id="findnewapplicants" class="answer accordion">
-					<p>Missionaries can track new applicants under the “Site Manager” link in Pathway’s administrative system. Click <a target="_blank" href="http://www.byui.edu/Documents/Admin_Offices/Online Learning/Pathway/PATH_Trainings/Student Tracker.pdf">here</a> for a tutorial.</p>
-				</div>
-			</div>
-			<div class="pf-section show">
-				<h4 class="accordion-heading">How can I find a student’s phone number and email address?</h4>
-				<div id="studentcontactinfo" class="answer accordion">
-					<p>Missionaries can view student information under the “Site Manager” link in Pathway’s administrative system. Click <a target="_blank" href="http://www.byui.edu/Documents/Admin_Offices/Online Learning/Pathway/PATH_Trainings/Student Course Sequence in PATH.pdf">here</a> for a tutorial.</p>
-				</div>
-			</div>
-			<div class="pf-section show">
-				<h4 class="accordion-heading">How do I set up groups?</h4>
-				<div id="setgroups" class="answer accordion">
-					<p>Typically, only lead missionaries will set up groups. Click <a target="_blank" href="http://www.byui.edu/Documents/Admin_Offices/Online Learning/Pathway/PATH_Trainings/Creating and Assigning Groups.pdf">here</a> for a tutorial.</p>
-				</div>
-			</div>
-			<div class="pf-section show">
-				<h4 class="accordion-heading">How do I access “New Missionary Orientation” or other training resources?</h4>
-				<div id="trainingresources" class="answer accordion">
-					<p>Missionaries can access most Pathway training resources <a target="_blank" href="http://www.byui.edu/pathway/trainings">here</a>. </p>
-				</div>
-			</div><br/><br/>
-
-			<div id="others-student-honor" class="hero pf-page-header show">
-				<h2 class="heading" id="Standard">Student Honor</h2>
-			</div>
-			<div class="pf-section show">
-				<h4 class="accordion-heading">Are Pathway students required to live the BYU-Idaho Honor Code?</h4>
-				<div id="honorcode" class="answer accordion">
-					<p>Pathway students are encouraged to strive to live the BYU-Idaho Honor Code, but are not required to do so as a condition of enrollment. (However, Pathway students who join the BYU-Idaho Online Degree Program after Pathway will be required to live the BYU-Idaho Honor Code.)</p>
+					<p>Disability accommodations may be available to students who qualify. For more information, visit <a target="_blank" href="http://www.byui.edu/disabilities/pathway-and-disabilities">www.byui.edu/disabilities/pathway-and-disabilities</a>.</p>
 				</div>
 			</div><br/><br/>
 
