--- a/pages/contact-us/self-help-path.html
+++ b/pages/contact-us/self-help-path.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="">
 	<meta name="author" content="">
-	<title>Pathway - Self Help Page</title>
+	<title>Pathway - PATH</title>
 	
 	<!-- Browser Icons -->
 	<link rel="shortcut icon" href="/working-build/docs-assets/ico/favicon.png">
@@ -93,7 +93,7 @@
                 <li class="first"><a href="/working-build/">Home</a></li>
                 <li ><a href="/working-build/pages/contact-us/help.html">Help</a></li>
                 
-                <li class="last">Self Help Page</li> 
+                <li class="last">PATH</li> 
             </ul>
         </div>
     </div>
@@ -106,19 +106,9 @@
 	<div class="row row-offcanvas row-offcanvas-right">
 		<div class="col-xs-12">
 
-			<div id="others-disabilities" class="hero pf-page-header show">
+			<div id="others-general" class="hero pf-page-header show">
 				<img alt="icon" src="/working-build/img/contact-us/Other-Topics.png" />
 				<h1 class="heading ">Other Topics</h1>
-				<h2 class="heading" id="Standard">Disabilities</h2>
-			</div>
-			<div class="pf-section show">
-				<h4 class="accordion-heading">Are disability accommodations available to Pathway students?</h4>
-				<div id="accommodations" class="answer accordion">
-					<p>Disability accommodations may be available to students who qualify. For more information, visit <a href="www.byui.edu/disabilities/pathway-and-disabilities">www.byui.edu/disabilities/pathway-and-disabilities</a>.</p>
-				</div>
-			</div><br/><br/>
-
-			<div id="others-general" class="hero pf-page-header show">
 				<h2 class="heading" id="Standard">PATH</h2>
 			</div>
 			<div class="pf-section show">
@@ -149,16 +139,6 @@
 				<h4 class="accordion-heading">How do I access “New Missionary Orientation” or other training resources?</h4>
 				<div id="trainingresources" class="answer accordion">
 					<p>Missionaries can access most Pathway training resources <a target="_blank" href="http://www.byui.edu/pathway/trainings">here</a>. </p>
-				</div>
-			</div><br/><br/>
-
-			<div id="others-student-honor" class="hero pf-page-header show">
-				<h2 class="heading" id="Standard">Student Honor</h2>
-			</div>
-			<div class="pf-section show">
-				<h4 class="accordion-heading">Are Pathway students required to live the BYU-Idaho Honor Code?</h4>
-				<div id="honorcode" class="answer accordion">
-					<p>Pathway students are encouraged to strive to live the BYU-Idaho Honor Code, but are not required to do so as a condition of enrollment. (However, Pathway students who join the BYU-Idaho Online Degree Program after Pathway will be required to live the BYU-Idaho Honor Code.)</p>
 				</div>
 			</div><br/><br/>
 
