--- a/pages/contact-us/self-help-tuition.html
+++ b/pages/contact-us/self-help-tuition.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="">
 	<meta name="author" content="">
-	<title>Pathway - Self Help Page</title>
+	<title>Pathway - Tuition</title>
 	
 	<!-- Browser Icons -->
 	<link rel="shortcut icon" href="/working-build/docs-assets/ico/favicon.png">
@@ -93,7 +93,7 @@
                 <li class="first"><a href="/working-build/">Home</a></li>
                 <li ><a href="/working-build/pages/contact-us/help.html">Help</a></li>
                 
-                <li class="last">Self Help Page</li> 
+                <li class="last">Tuition</li> 
             </ul>
         </div>
     </div>
@@ -106,59 +106,93 @@
 	<div class="row row-offcanvas row-offcanvas-right">
 		<div class="col-xs-12">
 
-			<div id="others-disabilities" class="hero pf-page-header show">
-				<img alt="icon" src="/working-build/img/contact-us/Other-Topics.png" />
-				<h1 class="heading ">Other Topics</h1>
-				<h2 class="heading" id="Standard">Disabilities</h2>
+			<div id="morepayments" class="hero pf-page-header show">
+				<img alt="icon" src="/working-build/img/contact-us/Have-a-Question/Tuition-Icon-Mini.png" />
+				<h1 class="heading turquoise">Tuition</h1>
+				<h2 class="heading" id="Standard">Payments</h2>
 			</div>
 			<div class="pf-section show">
-				<h4 class="accordion-heading">Are disability accommodations available to Pathway students?</h4>
-				<div id="accommodations" class="answer accordion">
-					<p>Disability accommodations may be available to students who qualify. For more information, visit <a href="www.byui.edu/disabilities/pathway-and-disabilities">www.byui.edu/disabilities/pathway-and-disabilities</a>.</p>
+				<h4 class="accordion-heading">How much is tuition for Pathway?</h4>
+				<div id="whatcost" class="answer accordion">
+					<p>Pathway tuition varies by country.
+					<ul>
+						<li>Click <a target="_blank" href="https://pathway.lds.org/main/costcalculator?language=true">here</a> for tuition information for Pathway's <a target="_blank" href="https://pathway.lds.org/main/standard">Standard</a> version.</li>
+						<li>Click <a target="_blank" href="https://pathway.lds.org/main/costcalculator">here</a> for tuition information for Pathway's <a target="_blank" href="https://pathway.lds.org/main/language">L</a> version.</li>
+					</ul>
+					</p>
+				</div>
+			</div>
+			<div class="pf-section show">
+				<h4 class="accordion-heading">How do I pay my Pathway tuition?</h4>
+				<div id="howtopay" class="answer accordion">
+					<p>To pay Pathway tuition, students should do the following:
+					<ol>
+						<li>Go to <a target="_blank" href="https://pathway.lds.org">pathway.lds.org</a> and sign in (top right corner).</li>
+						<li>Click the down arrow next to the student's name, and select the "Payments" link.</li>
+						<li>Indicate the amount to pay, and click "Pay". Users will be taken to e new web page to finalize payment.</li>
+					</ol>
+					For a tutorial on how to pay tuition, click <a target="_blank" href="http://www.byui.edu/pathway/trainings/paying-tuition">here</a>.</p>
+				</div>
+			</div>
+			<div class="pf-section show">
+				<h4 class="accordion-heading">When is tuition due?</h4>
+				<div id="tuitionduedate" class="answer accordion">
+					<p>Tuition is due by the first day of each semester. A one-time 5 percent late fee will be applied to any outstanding balance not paid within seven days of the first day of class.</p>
+				</div>
+			</div>
+			<div class="pf-section show">
+				<h4 class="accordion-heading">What happens if I pay late?</h4>
+				<div id="paylate" class="answer accordion">
+					<p>A one-time 5 percent late fee will be applied to any outstanding balance not paid within seven days of the first day of class. Additionally, students who do not pay their current balance by the end of the semester will not be permitted to enroll in future semesters.</p>
+				</div>
+			</div>
+			<div class="pf-section show">
+				<h4 class="accordion-heading">What if I can't pay my Pathway tuition?</h4>
+				<div id="icantpay" class="answer accordion">
+					<p>If payment is not made by the end of the semester, students will be withdrawn from Pathway and will be unable to continue the program. To rejoin Pathway, students must first pay the outstanding balance, including late fees, and then reapply to the program.</p>
+				</div>
+			</div>
+			<div class="pf-section show">
+				<h4 class="accordion-heading">Does Pathway offers payment plans?</h4>
+				<div id="paymentplan" class="answer accordion">
+					<p>No, Pathway does not offer payment plans. However, students may choose to pay in installments, as long as their current balance is paid by the tuition payment deadline.</p>
+				</div>
+			</div>
+			<div class="pf-section show">
+				<h4 class="accordion-heading">Can I pay for the entire year of Pathway upfront?</h4>
+				<div id="payoneyear" class="answer accordion">
+					<p>No, Pathway does not offer an option to pay for all three semesters upfront. Tuition is paid on a semester-by-semester basis.</p>
 				</div>
 			</div><br/><br/>
-
-			<div id="others-general" class="hero pf-page-header show">
-				<h2 class="heading" id="Standard">PATH</h2>
+			<div id="morefinancialaid" class="hero pf-page-header show">
+				<h2 class="heading" id="Standard">Financial Aid</h2>
 			</div>
 			<div class="pf-section show">
-				<h4 class="accordion-heading">What is PATH?</h4>
-				<div id="whatispath" class="answer accordion">
-					<p>PATH is the name of Pathway’s administrative system. In PATH, missionaries and Pathway employees can access information about individual Pathway sites, students, and more.</p>
-				</div>
-			</div>
-			<div class="pf-section show">
-				<h4 class="accordion-heading">How can I see new applicants to my Pathway site?</h4>
-				<div id="findnewapplicants" class="answer accordion">
-					<p>Missionaries can track new applicants under the “Site Manager” link in Pathway’s administrative system. Click <a target="_blank" href="http://www.byui.edu/Documents/Admin_Offices/Online Learning/Pathway/PATH_Trainings/Student Tracker.pdf">here</a> for a tutorial.</p>
-				</div>
-			</div>
-			<div class="pf-section show">
-				<h4 class="accordion-heading">How can I find a student’s phone number and email address?</h4>
-				<div id="studentcontactinfo" class="answer accordion">
-					<p>Missionaries can view student information under the “Site Manager” link in Pathway’s administrative system. Click <a target="_blank" href="http://www.byui.edu/Documents/Admin_Offices/Online Learning/Pathway/PATH_Trainings/Student Course Sequence in PATH.pdf">here</a> for a tutorial.</p>
-				</div>
-			</div>
-			<div class="pf-section show">
-				<h4 class="accordion-heading">How do I set up groups?</h4>
-				<div id="setgroups" class="answer accordion">
-					<p>Typically, only lead missionaries will set up groups. Click <a target="_blank" href="http://www.byui.edu/Documents/Admin_Offices/Online Learning/Pathway/PATH_Trainings/Creating and Assigning Groups.pdf">here</a> for a tutorial.</p>
-				</div>
-			</div>
-			<div class="pf-section show">
-				<h4 class="accordion-heading">How do I access “New Missionary Orientation” or other training resources?</h4>
-				<div id="trainingresources" class="answer accordion">
-					<p>Missionaries can access most Pathway training resources <a target="_blank" href="http://www.byui.edu/pathway/trainings">here</a>. </p>
+				<h4 class="accordion-heading">Is financial aid available to Pathway students?</h4>
+				<div id="financialaid" class="answer accordion">
+					<h6>United States</h6>
+					<p>Pathway students in the United States do not qualify for U.S. federal financial aid because Pathway is not a degree-granting program. Pathway students also do not qualify for BYU-Idaho scholarships. Students are encouraged to search for private scholarships if they need financial assistance.<br/><br/>
+					U.S. students who have a high school diploma or equivalent are eligible to apply for U.S. federal financial aid if they enter a degree-seeking program after Pathway.</p>
+					<h6>International</h6>
+					<p>Pathway students do not qualify for BYU-Idaho scholarships. International Pathway students may consider searching for private scholarships or learning more about the <a target="_blank" href="https://www.lds.org/topics/pef-self-reliance?lang=eng">Perpetual Education Funds (PEF)</a> as a possible option to gain financial assistance.</p>
 				</div>
 			</div><br/><br/>
-
-			<div id="others-student-honor" class="hero pf-page-header show">
-				<h2 class="heading" id="Standard">Student Honor</h2>
+			<div id="morerefunds" class="hero pf-page-header show">
+				<h2 class="heading" id="Standard">Refunds</h2>
 			</div>
 			<div class="pf-section show">
-				<h4 class="accordion-heading">Are Pathway students required to live the BYU-Idaho Honor Code?</h4>
-				<div id="honorcode" class="answer accordion">
-					<p>Pathway students are encouraged to strive to live the BYU-Idaho Honor Code, but are not required to do so as a condition of enrollment. (However, Pathway students who join the BYU-Idaho Online Degree Program after Pathway will be required to live the BYU-Idaho Honor Code.)</p>
+				<h4 class="accordion-heading">What is Pathway's tuition refund policy?</h4>
+				<div id="refundspolicy" class="answer accordion">
+					<p>Students who withdraw from Pathway before the payment deadline will receive a full refund. Students who withdraw after the first week of classes and before 60 percent of the semester has passed will receive a pro-rated refund. The Pathway Home Office calculates the percentage refunded based on when the student withdraws from Pathway. No refund will be issued after 60 percent of a semester has passed. In addition, Pathway reserves the right to not grant a refund to a student who is suspended or expelled.</p>
+				</div>
+			</div><br/><br/>
+			<div id="moretaxes" class="hero pf-page-header show">
+				<h2 class="heading" id="Standard">Taxes</h2>
+			</div>
+			<div class="pf-section show">
+				<h4 class="accordion-heading">Will my participation in Pathway affect the taxes I pay?</h4>
+				<div id="taxes" class="answer accordion">
+					<p>Possibly. Each country has a separate set of laws. As a result of a student's Pathway participation, taxes or other payments may be owed to his/her local government. It is each student responsibility to understand those laws and comply.</p>
 				</div>
 			</div><br/><br/>
 
